# controller/contacts.js
@@ -1,15 +1,14 @@
 require('dotenv').config();
 const ObjectId = require('mongoose').Types.ObjectId;
-const boards = require('../models/boards');
+const contacts = require('../models/contacts');
 
 
-// GET all boards//
-// controller/boards.js
+// GET all contacts
+// controllers/contacts.js
 const getAll = async (req, res) => {
-   //#swagger.tags=['Boards']
+   //#swagger.tags=['contacts']
   try {
-    const result = await boards.find({});
-    console.log('testing');
+    const result = await contacts.find({});
     res.status(200).json(result);
   } catch (error) {
     console.error(error);
@@ -18,17 +17,17 @@ const getAll = async (req, res) => {
 };
 
 
-// GET a single board by ID
+// GET a single contact by ID
 const getSingle = async (req, res) => {
-   //#swagger.tags=['boards']
+   //#swagger.tags=['contacts']
   try {
     const id = new ObjectId(req.params.id)
-    const result = await boards.findOne({ _id: id })
+    const result = await contacts.findOne({ _id: id })
 
     if (result) {
       res.status(200).json(result);
     } else {
-      res.status(404).json({ error: ' Board not found' });
+      res.status(404).json({ error: ' Contacts not found' });
     }
   } catch (error) {
     console.error(error);
@@ -37,20 +36,20 @@ const getSingle = async (req, res) => {
 };
 
 
-//Create new Board function
-const createBoard = async (req, res) => {
-   //#swagger.tags=['Boards']
+//Create new Contacts function
+const createContacts = async (req, res) => {
+   //#swagger.tags=['contacts']
   try {
     const data = {
-      boardName: req.body.boardName,
-      boardFinish: req.body.boardFinish,
+      ContactsName: req.body.ContactsName,
+      ContactsFinish: req.body.lastName,
       email: req.body.email,
-      boardColor: req.body.boardColor,
+      ContactsColor: req.body.favoriteColor,
       
       
       
     }
-    const result = await Boards.create(data);
+    const result = await contacts.create(data);
     res.status(204).send();
   } catch (error) {
     console.error(error);
@@ -60,22 +59,22 @@ const createBoard = async (req, res) => {
 
 };
 
-//Update board function
-const updateBoard = async (req, res) => {
-   //#swagger.tags=['boards']
+//Update contact function
+const updateContacts = async (req, res) => {
+   //#swagger.tags=['Contacts']
   try {
     const id = new ObjectId(req.params.id)
     const data = {
       _id: id,
-      boardName: req.body.boardName,
-      boardFinish: req.body.boardFinish,
+      ContactsName: req.body.ContactsName,
+      ContactsFinish: req.body.lastName,
       email: req.body.email,
-      boardColor: req.body.boardColor,
+      ContactsColor: req.body.favoriteColor,
       
     
       
     }
-    const result = await boards.replaceOne({ _id: id }, data)
+    const result = await Contacts.replaceOne({ _id: id }, data)
     if (result.modifiedCount > 0) {
       res.status(204).send();
     }
@@ -85,12 +84,12 @@ const updateBoard = async (req, res) => {
   }
 };
 
-//Delete board function
-const deleteBoard = async (req, res) => {
-   //#swagger.tags=['boards']
+//Delete contact function
+const deleteContacts = async (req, res) => {
+   //#swagger.tags=['Contacts']
   try {
     const id = new ObjectId(req.params.id)
-    const result = await Boards.deleteOne({ _id: id });
+    const result = await contacts.deleteOne({ _id: id });
     if (result.deletedCount > 0) {
       res.status(204).send();
     }
@@ -103,7 +102,7 @@ const deleteBoard = async (req, res) => {
 module.exports = {
   getAll,
   getSingle,
-  createBoard,
-  updateBoard,
-  deleteBoard
+  createContacts,
+  updateContacts,
+  deleteContacts
 }
